# dili_very_bot

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: data_gathering.rs  db.rs  logger.rs  main.rs  markup.rs  new_order.rs  order.rs  order_action.rs  public_chat.rs  tg_msg.rs  ui.rs  urgency.rs  user.rs  utils.rs
src/db/: mem.rs  redis_db.rs
src/order/: action.rs  action_error.rs  action_kind.rs  role.rs  status.rs
src/ui/: collect_data.rs  commands.rs  hello.rs  help.rs  list_active_orders.rs  list_my_assignments.rs  main_menu.rs  me.rs  new_order.rs  order.rs  order_action.rs  say_hello.rs  show_my_orders.rs  urgency.rs
