[package]
name = "dili_very_bot_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
pretty_env_logger = "0.4.0"
teloxide = { version = "0.9.2", features = ["full"] }
tokio =    { version = "1.19.2", features = ["full"] }
reqwest =  { version = "*", features = ["rustls-tls-native-roots"]}
chrono = "0.4.19"
